failing test added

--- a/test/guideline-tests/SuccessCriteria-4.1.2.html
+++ b/test/guideline-tests/SuccessCriteria-4.1.2.html
@@ -15,6 +15,12 @@
       <input id=":a" />
     </form>
   </div>
+  <div id="test-scope-2">
+    <form>
+      <label>Username</label>
+      <input id="b" />
+    </form>
+  </div>
 
   <script src="../quail-testrunner.js"></script>
   <script>
