correct html for test

--- a/test/guideline-tests/SuccessCriteria-4.1.2.html
+++ b/test/guideline-tests/SuccessCriteria-4.1.2.html
@@ -13,11 +13,8 @@
     <form>
       <label for=":a">Username</label>
       <input id=":a" />
-    </form>
-  </div>
-  <div id="test-scope-2">
-    <form>
-      <label>Username</label>
+
+      <label>Username 2</label>
       <input id="b" />
     </form>
   </div>
