--- a/test/accessibility-tests/KINGUseLongDateFormat.html
+++ b/test/accessibility-tests/KINGUseLongDateFormat.html
@@ -9,6 +9,13 @@
 </div>
 
 <div class="quail-test" data-expected="pass" data-accessibility-test="KINGUseLongDateFormat">
+  <p>
+	Date nested in an unsupported tag
+	<small>12-04-12</small>
+  </p>
+</div>
+
+<div class="quail-test" data-expected="pass" data-accessibility-test="KINGUseLongDateFormat">
   <p>Text with long date of 12 may 2014.</p>
 </div>
 
