--- a/examples/simple/wcag2.html
+++ b/examples/simple/wcag2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<html>
+<html lang="english">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title></title>
