--- a/examples/simple/wcag2.html
+++ b/examples/simple/wcag2.html
@@ -8,7 +8,8 @@
     <body>
     <div id="test">
      <p><strong>I'm no error!</strong> Please forgive me.</p>
-     <p>This is an image of my dog, Kogepan:</p>
+     <p>This is an <code style="color:#DDD">image</code> of 
+       <a href="">my dog</a>, Kogepan:</p>
      <img src="../common/kogepan.png">
 <!-- 
      <input type="text">
