changed notApplicable to inapplicable
inapplicable is the correct EARL value here. NotApplicable is the class
and inapplicable is an instance of that class. Classes can be used to
extend result types, but when reporting an instance of that class should
be used.

--- a/test/accessibility-tests/aAdjacentWithSameResourceShouldBeCombined.html
+++ b/test/accessibility-tests/aAdjacentWithSameResourceShouldBeCombined.html
@@ -4,7 +4,7 @@
 		<title>aAdjacentWithSameResourceShouldBeCombined</title>
 	</head>
 	<body>
-		<div class="quail-test" data-expected="notApplicable" data-accessibility-test="aAdjacentWithSameResourceShouldBeCombined">
+		<div class="quail-test" data-expected="inapplicable" data-accessibility-test="aAdjacentWithSameResourceShouldBeCombined">
 		  <a href="products.html"><img src="../assets/go.gif" alt="" />Products page</a>
 		</div>
 
