--- a/test/accessibility-tests/aLinkWithNonText.html
+++ b/test/accessibility-tests/aLinkWithNonText.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 
-		<div class="quail-test" data-expected="notApplicable" data-accessibility-test="aLinkWithNonText">
+		<div class="quail-test" data-expected="inapplicable" data-accessibility-test="aLinkWithNonText">
 			<a name="anchor"></a>
 		</div>
 
