--- a/test/accessibility-tests/aMustContainText.html
+++ b/test/accessibility-tests/aMustContainText.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 
-		<div class="quail-test" data-expected="notApplicable" data-accessibility-test="aMustContainText">
+		<div class="quail-test" data-expected="inapplicable" data-accessibility-test="aMustContainText">
 			<p>This is a page with an anchor <a id="anchor"></a>
 				</p>
 		</div>
