--- a/test/accessibility-tests/aSuspiciousLinkText.html
+++ b/test/accessibility-tests/aSuspiciousLinkText.html
@@ -4,7 +4,7 @@
 		<title>aSuspiciousLinkText</title>
 	</head>
 	<body>
-		<div class="quail-test" data-expected="notApplicable" data-accessibility-test="aSuspiciousLinkText">
+		<div class="quail-test" data-expected="inapplicable" data-accessibility-test="aSuspiciousLinkText">
 			<a name="anchor"></a>
 		</div>
 
