--- a/test/accessibility-tests/blockquoteUseForQuotations.html
+++ b/test/accessibility-tests/blockquoteUseForQuotations.html
@@ -4,7 +4,7 @@
 		<title>blockquoteUseForQuotations</title>
 	</head>
 	<body>
-		<div class="quail-test" data-expected="notApplicable" data-accessibility-test="blockquoteUseForQuotations">
+		<div class="quail-test" data-expected="inapplicable" data-accessibility-test="blockquoteUseForQuotations">
 			<blockquote>
 				<p>"This is a paragraph that is a quote inside a larger blockquote."</p>
 			</blockquote>
