--- a/test/accessibility-tests/definitionListsAreUsed.html
+++ b/test/accessibility-tests/definitionListsAreUsed.html
@@ -27,7 +27,7 @@
 			<li>Definition for term B</li>
 		</ul>
 	</div>
-	<div class="quail-test" data-expected="notApplicable" data-accessibility-test="definitionListsAreUsed">
+	<div class="quail-test" data-expected="inapplicable" data-accessibility-test="definitionListsAreUsed">
 		<dl>
 			<dt>Term A</dt>
 			<dd>Definition for term A</dd>
