--- a/test/accessibility-tests/doNotUseGraphicalSymbolToConveyInformation.html
+++ b/test/accessibility-tests/doNotUseGraphicalSymbolToConveyInformation.html
@@ -20,7 +20,7 @@
         <p><span>B</span> can be used for testing.</p>
     </div>
 
-    <div class="quail-test" data-expected="p:ignore|abbr:notApplicable" data-accessibility-test="doNotUseGraphicalSymbolToConveyInformation">
+    <div class="quail-test" data-expected="p:ignore|abbr:inapplicable" data-accessibility-test="doNotUseGraphicalSymbolToConveyInformation">
         Single letter abbreviations are allowed <abbr title="Quail">X</abbr>.
     </div>
 
