--- a/test/accessibility-tests/documentIDsMustBeUnique.html
+++ b/test/accessibility-tests/documentIDsMustBeUnique.html
@@ -4,7 +4,7 @@
     <title>documentIDsMustBeUnique</title>
 </head>
 <body>
-  <div class="quail-test" data-expected="notApplicable" data-accessibility-test="documentIDsMustBeUnique">
+  <div class="quail-test" data-expected="inapplicable" data-accessibility-test="documentIDsMustBeUnique">
     <p>This paragraph has no ID</p>
   </div>
   <div class="quail-test" data-expected="h2:ignore|p:fail" data-accessibility-test="documentIDsMustBeUnique">
