--- a/test/accessibility-tests/documentIsWrittenClearly.html
+++ b/test/accessibility-tests/documentIsWrittenClearly.html
@@ -49,7 +49,7 @@
         </p>
     </div>
 
-    <div class="quail-test" data-expected="notApplicable" data-accessibility-test="documentIsWrittenClearly">
+    <div class="quail-test" data-expected="inapplicable" data-accessibility-test="documentIsWrittenClearly">
       <a name="empty"></a>
     </div>
 
