--- a/test/accessibility-tests/imgAltIsDifferent.html
+++ b/test/accessibility-tests/imgAltIsDifferent.html
@@ -12,7 +12,7 @@
 		<img src="../assets/rex.jpg" alt="photo of rex the cat" />
 	</div>
 
-	<div class="quail-test" data-expected="notApplicable" data-accessibility-test="imgAltIsDifferent">
+	<div class="quail-test" data-expected="inapplicable" data-accessibility-test="imgAltIsDifferent">
 		<img alt="photo of rex the cat" />
 	</div>
 
