--- a/test/accessibility-tests/languageUnicodeDirection.html
+++ b/test/accessibility-tests/languageUnicodeDirection.html
@@ -23,7 +23,7 @@
         </p>
     </div>
 
-    <div class="quail-test" data-expected="notApplicable" data-accessibility-test="languageUnicodeDirection" title="No language direction change.">
+    <div class="quail-test" data-expected="inapplicable" data-accessibility-test="languageUnicodeDirection" title="No language direction change.">
         <p>
             The title has no right-to-left characters.
         </p>
