--- a/test/accessibility-tests/tableLayoutDataShouldNotHaveTh.html
+++ b/test/accessibility-tests/tableLayoutDataShouldNotHaveTh.html
@@ -38,7 +38,7 @@
         </table>
     </div>
 
-    <div class="quail-test" data-expected="notApplicable" data-accessibility-test="tableLayoutDataShouldNotHaveTh">
+    <div class="quail-test" data-expected="inapplicable" data-accessibility-test="tableLayoutDataShouldNotHaveTh">
         <table border="0" cellpadding="5" summary="this table is used to create 2 columns of text">
             <tr>
                 <td>Latin is a dead language.</td>
