--- a/test/accessibility-tests/tableLayoutHasNoCaption.html
+++ b/test/accessibility-tests/tableLayoutHasNoCaption.html
@@ -35,7 +35,7 @@
     </table>
   </div>
 
-  <div class="quail-test" data-expected="notApplicable" data-accessibility-test="tableLayoutHasNoCaption">
+  <div class="quail-test" data-expected="inapplicable" data-accessibility-test="tableLayoutHasNoCaption">
     <table border="0" cellpadding="5">
       <tr>
         <td>
