--- a/test/accessibility-tests/ariaOrphanedContent.html
+++ b/test/accessibility-tests/ariaOrphanedContent.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div class="quail-test" data-expected="notApplicable" data-accessibility-test="ariaOrphanedContent">
+  <div class="quail-test" data-expected="inapplicable" data-accessibility-test="ariaOrphanedContent">
     <p>This is a paragraph.</p>
   </div>
   <div class="quail-test" data-expected="pass" data-accessibility-test="ariaOrphanedContent">
