--- a/test/accessibility-tests/emoticonsExcessiveUse.html
+++ b/test/accessibility-tests/emoticonsExcessiveUse.html
@@ -10,7 +10,7 @@
 	<div class="quail-test" data-expected="pass" data-accessibility-test="emoticonsExcessiveUse">
 		<p>Just a regular paragraph with a single emoticon :).</p>
 	</div>
-	<div class="quail-test" data-expected="notApplicable" data-accessibility-test="emoticonsExcessiveUse">
+	<div class="quail-test" data-expected="inapplicable" data-accessibility-test="emoticonsExcessiveUse">
 		<p>Just a regular paragraph.</p>
 	</div>
 
