--- a/test/accessibility-tests/aMustContainText.html
+++ b/test/accessibility-tests/aMustContainText.html
@@ -10,6 +10,11 @@
 				</p>
 		</div>
 
+		<div class="quail-test" data-expected="inapplicable" data-accessibility-test="aMustContainText">
+		  <p>Select link for more information about dogs.
+		    <a href="dogs.html" style="display:none">Metadata!</a></p>
+		</div>
+
 		<div class="quail-test" data-expected="pass" data-accessibility-test="aMustContainText">
 		  <p>Select link for more information about dogs.<a href="dogs.html"><img src="../assets/rex.jpg" alt="more information about dogs"/></a>
         </p>
@@ -17,6 +22,13 @@
 
 		<div class="quail-test" data-expected="pass" data-accessibility-test="aMustContainText">
 		  <p>Select link for more <a href="dogs.html">information about dogs</a>.</p>
+		</div>
+
+		<div class="quail-test" data-expected="pass" data-accessibility-test="aMustContainText">
+		  <p>Select link for more information about dogs.
+		  	<!-- The following can fail other tests if CSS isn't used to give the link body. This may occure with background images -->
+		    <a href="dogs.html" title="About dogs"></a>
+	      </p>
 		</div>
 
 		<div class="quail-test" data-expected="fail" data-accessibility-test="aMustContainText" title="Title attribute only">
