--- a/test/accessibility-tests/inputWithoutLabelHasTitle.html
+++ b/test/accessibility-tests/inputWithoutLabelHasTitle.html
@@ -4,24 +4,41 @@
     <title>inputWithoutLabelHasTitle</title>
 </head>
 <body>
-    <div class="quail-test" data-expected="fail" data-accessibility-test="inputWithoutLabelHasTitle"
-        <form>
-            <input type="text" class="quail-failed-element"></input>
-            <button type="submit">Search</button>
-        </form>
+
+    <div class="quail-test" data-expected="inapplicable"
+    data-accessibility-test="inputWithoutLabelHasTitle">
+        <!-- no input element -->
     </div>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="inputWithoutLabelHasTitle">
-        <form>
-            <label for="select">Select your favorite pet</label>
-            <select id="select">
-                <option>Cat</option>
-                <option>Dog</option>
-                <option>Fish</option>
-            </select>
-            <input type="text" title="Search keywords"></input>
-            <button type="submit">Search</button>
-        </form>
+
+    <div class="quail-test" data-expected="inapplicable"
+    data-accessibility-test="inputWithoutLabelHasTitle">
+        <input type="text" style="display:none" />
     </div>
+
+    <div class="quail-test" data-expected="fail"
+    data-accessibility-test="inputWithoutLabelHasTitle">
+        <input type="text" class="quail-failed-element" />
+    </div>
+
+    <div class="quail-test" data-expected="fail"
+    data-accessibility-test="inputWithoutLabelHasTitle">
+        <label>Implicit label:
+          <input type="text" class="quail-failed-element" />
+        </label>
+    </div>
+
+    <div class="quail-test" data-expected="pass"
+    data-accessibility-test="inputWithoutLabelHasTitle">
+        <label for="select">Select your favorite pet</label>
+        <select id="select">
+            <option>Cat</option>
+            <option>Dog</option>
+            <option>Fish</option>
+        </select>
+        <input type="text" title="Search keywords"></input>
+    </div>
+
+
 
 <script src="../quail-testrunner.js"></script>
 </body>
