--- a/test/accessibility-tests/passwordHasLabel.html
+++ b/test/accessibility-tests/passwordHasLabel.html
@@ -41,7 +41,7 @@
         </form>
     </div>
 
-    <div class="quail-test" data-expected="pass" data-accessibility-test="passwordHasLabel">
+    <div class="quail-test" data-expected="fail" data-accessibility-test="passwordHasLabel">
         <form action="http://somesite.com/prog/adduser" method="post">
             <p>
                 <label>
