--- a/test/accessibility-tests/radioHasLabel.html
+++ b/test/accessibility-tests/radioHasLabel.html
@@ -39,7 +39,7 @@
         </form>
     </div>
 
-    <div class="quail-test" data-expected="pass" data-accessibility-test="radioHasLabel">
+    <div class="quail-test" data-expected="fail" data-accessibility-test="radioHasLabel">
         <form action="http://www.test.com/testing" method="post">
             <p>
                 <label>
