--- a/test/accessibility-tests/selectHasAssociatedLabel.html
+++ b/test/accessibility-tests/selectHasAssociatedLabel.html
@@ -93,7 +93,7 @@
             </p>
         </form>
     </div>
-    <div class="quail-test" data-expected="pass" data-accessibility-test="selectHasAssociatedLabel">
+    <div class="quail-test" data-expected="fail" data-accessibility-test="selectHasAssociatedLabel">
 
         <form method="post" action="http://www.test.com">
             <p>
