--- a/test/accessibility-tests/textareaHasAssociatedLabel.html
+++ b/test/accessibility-tests/textareaHasAssociatedLabel.html
@@ -17,7 +17,7 @@
 		</form>
 	</div>
 
-	<div class="quail-test" data-expected="pass" data-accessibility-test="textareaHasAssociatedLabel">
+	<div class="quail-test" data-expected="fail" data-accessibility-test="textareaHasAssociatedLabel">
 		<form action="http://www.test.com/testing" method="post">
 			<label>
 				Comments:
