improved testss documentLangIsISO

--- a/test/accessibility-tests/documentLangIsISO639Standard-pass.html
+++ b/test/accessibility-tests/documentLangIsISO639Standard-pass.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html  class="quail-test self-fail" data-expected="pass" data-accessibility-test="documentLangIsISO639Standard" lang="en">
+<html  class="quail-test self-fail" data-expected="pass"
+data-accessibility-test="documentLangIsISO639Standard" lang="en-GB">
 
     <head>
         <title>documentLangIsISO639Standard-fail</title>
