--- a/test/accessibility-tests/documentLangIsISO639Standard-fail.html
+++ b/test/accessibility-tests/documentLangIsISO639Standard-fail.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="quail-test self-fail" data-expected="fail" data-accessibility-test="documentLangIsISO639Standard" lang="no-language">
+<html class="quail-test self-fail" data-expected="fail" data-accessibility-test="documentLangIsISO639Standard" lang="english">
 
     <head>
         <title>documentLangIsISO639Standard-fail</title>
