Added formButtonsHaveValue tests

--- a/test/accessibility-tests/formButtonsHaveValue.html
+++ b/test/accessibility-tests/formButtonsHaveValue.html
@@ -4,13 +4,35 @@
 	<title>formButtonsHaveValue</title>
 </head>
 <body>
-	<div class="quail-test" data-expected="fail" data-accessibility-test="formButtonsHaveValue">
+
+	<div class="quail-test" data-expected="inapplicable"
+	data-accessibility-test="formButtonsHaveValue">
+		<!-- No button here -->
+	</div>
+
+	<div class="quail-test" data-expected="fail"
+	data-accessibility-test="formButtonsHaveValue">
+		<form>
+			<input type="submit" class="quail-failed-element">
+		</form>
+	</div>
+
+	<div class="quail-test" data-expected="fail"
+	data-accessibility-test="formButtonsHaveValue">
 		<form>
 			<input type="button" class="quail-failed-element">
 		</form>
 	</div>
 
-	<div class="quail-test" data-expected="pass" data-accessibility-test="formButtonsHaveValue">
+	<div class="quail-test" data-expected="fail"
+	data-accessibility-test="formButtonsHaveValue">
+		<form>
+			<input type="reset" class="quail-failed-element">
+		</form>
+	</div>
+
+	<div class="quail-test" data-expected="pass"
+	data-accessibility-test="formButtonsHaveValue">
 		<form>
 			<input type="submit" value="Submit">
 			<input type="button" value="Do another thing">
