--- a/test/accessibility-tests/framesHaveATitle.html
+++ b/test/accessibility-tests/framesHaveATitle.html
@@ -4,15 +4,24 @@
 	<title>framesHaveATitle</title>
 </head>
 <body>
-	<div class="quail-test" data-expected="fail" data-accessibility-test="framesHaveATitle">
 
-		<p>This is an iframe.</p>
-		<iframe src="../assets/alternative1.html" class="quail-failed-element"></iframe>
+	<div class="quail-test" data-expected="inapplicable"
+	data-accessibility-test="framesHaveATitle">
+		<!-- No frame here -->
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="framesHaveATitle">
 
+	<div class="quail-test" data-expected="fail"
+	data-accessibility-test="framesHaveATitle">
 		<p>This is an iframe.</p>
-		<iframe src="../assets/alternative1.html" title="A descriptive title"></iframe>
+		<iframe src="../assets/alternative1.html" 
+		class="quail-failed-element"></iframe>
+	</div>
+
+	<div class="quail-test" data-expected="pass"
+	data-accessibility-test="framesHaveATitle">
+		<p>This is an iframe.</p>
+		<iframe src="../assets/alternative1.html" 
+		title="A descriptive title"></iframe>
 	</div>
 
 	<script src="../quail-testrunner.js"></script>
